--- a/index.html
+++ b/index.html
@@ -273,34 +273,32 @@
                 onClick={onClose}
                 style={{ position: 'fixed', top: 0, left: 0, right: 0, bottom: 0, background: 'rgba(0, 0, 0, 0.85)', backdropFilter: 'blur(10px)', zIndex: 1000 }}
               />
-              <motion.div
-                initial={{ opacity: 0, scale: 0.9, y: -30 }}
-                animate={{ opacity: 1, scale: 1, y: 0 }}
-                exit={{ opacity: 0, scale: 0.9, y: -30 }}
-                transition={{ type: "spring", stiffness: 300, damping: 30 }}
-                style={{
-                  position: 'fixed',
-                  top: '50%',
-                  left: '50%',
-                  transform: 'translate(-50%, -50%)',
-                  background: 'var(--bg-secondary)',
-                  borderRadius: 'var(--radius-xl)',
-                  border: '1px solid var(--border-medium)',
-                  padding: '24px',
-                  width: 'calc(100% - 40px)',
-                  maxWidth: '420px',
-                  maxHeight: 'calc(100vh - 120px)',
-                  overflow: 'auto',
-                  zIndex: 1001,
-                  boxShadow: '0 25px 60px -15px rgba(0, 0, 0, 0.6), 0 0 0 1px rgba(167, 139, 250, 0.1)',
-                }}
-              >
-                <div style={{ display: 'flex', justifyContent: 'space-between', alignItems: 'center', marginBottom: '20px' }}>
-                  <motion.h2 initial={{ opacity: 0, x: -10 }} animate={{ opacity: 1, x: 0 }} style={{ fontFamily: "'Fraunces', serif", fontSize: '20px', fontWeight: 600 }}>{title}</motion.h2>
-                  <motion.button whileHover={{ scale: 1.1, rotate: 90 }} whileTap={{ scale: 0.9 }} onClick={onClose} style={{ background: 'none', border: 'none', color: 'var(--text-muted)', cursor: 'pointer', padding: '4px' }}>{Icons.x}</motion.button>
-                </div>
-                {children}
-              </motion.div>
+              <div style={{ position: 'fixed', inset: 0, display: 'flex', alignItems: 'center', justifyContent: 'center', padding: '24px 20px 120px', zIndex: 1001, pointerEvents: 'none' }}>
+                <motion.div
+                  initial={{ opacity: 0, scale: 0.9, y: -30 }}
+                  animate={{ opacity: 1, scale: 1, y: 0 }}
+                  exit={{ opacity: 0, scale: 0.9, y: -30 }}
+                  transition={{ type: "spring", stiffness: 300, damping: 30 }}
+                  style={{
+                    background: 'var(--bg-secondary)',
+                    borderRadius: 'var(--radius-xl)',
+                    border: '1px solid var(--border-medium)',
+                    padding: '24px',
+                    width: 'calc(100% - 40px)',
+                    maxWidth: '420px',
+                    maxHeight: '100%',
+                    overflow: 'auto',
+                    pointerEvents: 'auto',
+                    boxShadow: '0 25px 60px -15px rgba(0, 0, 0, 0.6), 0 0 0 1px rgba(167, 139, 250, 0.1)',
+                  }}
+                >
+                  <div style={{ display: 'flex', justifyContent: 'space-between', alignItems: 'center', marginBottom: '20px' }}>
+                    <motion.h2 initial={{ opacity: 0, x: -10 }} animate={{ opacity: 1, x: 0 }} style={{ fontFamily: "'Fraunces', serif", fontSize: '20px', fontWeight: 600 }}>{title}</motion.h2>
+                    <motion.button whileHover={{ scale: 1.1, rotate: 90 }} whileTap={{ scale: 0.9 }} onClick={onClose} style={{ background: 'none', border: 'none', color: 'var(--text-muted)', cursor: 'pointer', padding: '4px' }}>{Icons.x}</motion.button>
+                  </div>
+                  {children}
+                </motion.div>
+              </div>
             </>
           )}
         </AnimatePresence>
