--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:wght@400;500;600;700&family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&display=swap" rel="stylesheet">
   
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -51,7 +51,7 @@
     html { height: -webkit-fill-available; }
     
     body {
-      font-family: 'Instrument Sans', -apple-system, sans-serif;
+      font-family: 'Jost', 'Century Gothic', 'Futura', -apple-system, sans-serif;
       background: var(--bg-primary);
       color: var(--text-primary);
       min-height: -webkit-fill-available;
